add more details in truck details page

--- a/client/foodtruck/foodtruck/Base.lproj/Main.storyboard
+++ b/client/foodtruck/foodtruck/Base.lproj/Main.storyboard
@@ -23,12 +23,41 @@
                                     <action selector="done:" destination="xW7-Jf-HWY" eventType="touchUpInside" id="fqs-0V-IWt"/>
                                 </connections>
                             </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Iuq-p7-pge">
+                                <rect key="frame" x="20" y="306" width="223" height="34"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="28"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="1C8-xA-Z6y">
+                                <rect key="frame" x="0.0" y="66" width="375" height="230"/>
+                            </imageView>
+                            <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="zfh-eY-Qvq">
+                                <rect key="frame" x="0.0" y="430" width="375" height="237"/>
+                            </mapView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cTj-ki-pMw">
+                                <rect key="frame" x="20" y="348" width="288" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gPZ-Py-0Px">
+                                <rect key="frame" x="0.0" y="402" width="375" height="30"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <state key="normal" title="Button">
+                                    <color key="titleColor" cocoaTouchSystemColor="darkTextColor"/>
+                                </state>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
                     <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina47"/>
                     <connections>
+                        <outlet property="addressBtn" destination="gPZ-Py-0Px" id="yQK-O5-EtJ"/>
                         <outlet property="doneBtn" destination="m3i-L8-qZ7" id="VM5-11-evi"/>
+                        <outlet property="hoursLbl" destination="cTj-ki-pMw" id="4yP-8h-bwQ"/>
+                        <outlet property="nameLbl" destination="Iuq-p7-pge" id="vgc-78-HRv"/>
+                        <outlet property="truckImg" destination="1C8-xA-Z6y" id="MUI-gC-goB"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="HyB-e1-0qD" userLabel="First Responder" sceneMemberID="firstResponder"/>
